--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,13 +12,13 @@ $nav-a-text: #515151;
 
 body {
   color: rgb(93, 93, 93);
-  font-family: CircularStd, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: CircularStd, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 /* Banner image */
 .banner {
-  background-image: url("https://s3.amazonaws.com/sdevito-web-portfolio/port-banner.png");
-  box-shadow: rgba(0, 0, 0, .25) 1px 1px;
+  background-image: url('https://s3.amazonaws.com/sdevito-web-portfolio/port-banner.png');
+  box-shadow: rgba(0, 0, 0, 0.25) 1px 1px;
   height: 45vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -226,8 +226,8 @@ a:hover {
 .contact-btn:link,
 .contact-btn:visited {
   color: #333;
-  font-size: .8em;
-  letter-spacing: .1em;
+  font-size: 0.8em;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
   min-width: 100px;
   max-width: 60%;
@@ -235,11 +235,11 @@ a:hover {
   margin-right: 1vw;
   margin-left: 1vw;
   border: 2px solid transparent;
-  transition: all .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
   &:after,
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     left: - 1em;
     top: -2px;
@@ -256,12 +256,12 @@ a:hover {
 
   &:hover {
     border-color: #97b494;
-    transition: border-color .2s .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+    transition: border-color 0.2s 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
     &:after,
     &:before {
       right: -2px;
-      transition: all .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+      transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     &:before {
@@ -304,7 +304,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   background-color: #ffffff;
-  height: 95vh;
+  height: 65vh;
   opacity: 0;
   transition: all 1s ease;
   justify-content: center;
@@ -313,9 +313,6 @@ a:hover {
 .intro-container-scroll {
   opacity: 1;
   transition: all 1.5s ease;
-  border-bottom-color: #5d5d5d;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
 }
 
 .me {
@@ -395,4 +392,9 @@ a:hover {
 
 .card-text {
   color: #ffffff;
+}
+
+.mountains {
+  width: 50%;
+  margin-bottom: 10px;
 }
