Mobile styling/content changes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -408,6 +408,10 @@ a:hover {
   .mountains {
     width: 75%;
   }
+
+  .description {
+    margin-top: 5%;
+  }
 }
 
 /* Intro page cloud animation */
