--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -399,21 +399,6 @@ a:hover {
   margin-bottom: 10px;
 }
 
-@media (max-width: 435px) {
-  .me {
-    height: 40%;
-    width: 50%;
-  }
-
-  .mountains {
-    width: 75%;
-  }
-
-  .description {
-    margin-top: 5%;
-  }
-}
-
 /* Intro page cloud animation */
 
 .cloud-animation-div {
@@ -469,6 +454,32 @@ a:hover {
   }
 }
 
+/* Repositioning and size adjustment for small screens */
+@media (max-width: 435px) {
+  .me {
+    height: 40%;
+    width: 50%;
+  }
+
+  .mountains {
+    width: 75%;
+  }
+
+  .description {
+    margin-top: 5%;
+  }
+
+  .intro-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .description {
+    text-align: center;
+    margin-right: 5%;
+  }
+}
+
 /* Repositioning and size adjustment for medium screens */
 @media (max-width: 1024px) {
   .clouds {
@@ -515,7 +526,7 @@ a:hover {
     }
   }
 }
-/* Size adjustment for small screens */
+/* Size adjustment for very small screens */
 @media (max-width: 320px) {
   .clouds {
     height: 1em;
