--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,9 @@ $nav-a-text: #515151;
 
 body {
   color: rgb(93, 93, 93);
-  font-family: CircularStd, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: LLCircularWeb, 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 /* Banner image */
@@ -458,11 +460,11 @@ a:hover {
 @media (max-width: 435px) {
   .me {
     height: 30%;
-    width: 45%;
+    width: 35%;
   }
 
   .welcome {
-    margin-bottom: 100px;
+    margin-bottom: 200px;
   }
 
   .mountains {
@@ -535,5 +537,10 @@ a:hover {
   .clouds {
     height: 1em;
     width: 2em;
+  }
+
+  .me {
+    height: 30%;
+    width: 45%;
   }
 }
