--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,8 @@ body {
   font-family: LLCircularWeb, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 500;
   font-style: normal;
+  margin: 0;
+  padding: 0;
 }
 
 /* Banner image */
@@ -300,7 +302,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   background-color: #ffffff;
-  height: 65vh;
+  height: 60vh;
   opacity: 1;
   transition: all 1s ease;
   justify-content: center;
