Refactor ProjectCard styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -339,30 +339,12 @@ a:hover {
   border-style: none;
 }
 
-.project-div {
-  flex: 1 1 50%;
-  flex-direction: column;
-  width: 100%;
-}
-
-.project-card {
-  padding: 4em;
-}
-
-.card-title {
-  font-weight: bold;
-}
-
-.card-text {
-  margin-top: 1em;
-}
-
 .mountains {
   width: 50%;
   margin-bottom: 10px;
 }
 
-/* Intro page cloud animation */
+/* Intro page oud animation */
 
 .cloud-animation-div {
   width: 100%;
